--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>Webgotchi</title>
-  <link rel="stylesheet" href="/game.css">
+  <link rel="stylesheet" href="./game.css">
 </head>
 <body>
 
