--- a/index.html
+++ b/index.html
@@ -214,6 +214,6 @@
   <!-- hidden file input -->
   <input type="file" id="file-input" accept=".tama,.txt" style="display:none">
 
-  <script src="/game.js"></script>
+  <script src="./game.js"></script>
 </body>
 </html>
